# FantasyTextGeneration

./: .gitignore  README.md  calculate_embeddings.py  finetuning.py  ft_llm.py  generate_dataset.py  hello.py  llm_only.py  pyproject.toml  rag_only.py  search_similar.py
results/: dataset.txt  output-ft-llm-user.txt  output-ft-llm.txt  output-llm-only-user.txt  output-llm-only.txt  output-rag-only-user.txt  output-rag-only.txt  tasks-user.txt  tasks.txt
